maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:3: error: Boolean(false) does not take parameters
def cern():Boolean = {var b = false()
                                   ^